tests/NormalTests/paczka1/fuzzy1/77604028.err
Error in line 1: hQn7eEzoI8 S495 66,7
Error in line 6: S624 S329 46,1
Error in line 16: hQn7eEzoI8 S329 80,5
Error in line 19: qy2NHDo8qc S495 31,0
Error in line 34: HWXzXYYkKTs S495 6,5
Error in line 35: HWXzXYYkKTs S624 83,1
